# machine-learning-project

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: gh-deploy.yml
docs/: gen_ref_pages.py  index.md  installation.md  mkdocs.yml
installation/: index.html
reference/SUMMARY/: index.html
reference/mlproject/decision_tree/: index.html
reference/mlproject/decision_tree/_decision_tree/: index.html
reference/mlproject/decision_tree/_impurity/: index.html
reference/mlproject/decision_tree/_node/: index.html
reference/mlproject/helpers/: index.html
reference/mlproject/helpers/_data_loader/: index.html
reference/mlproject/helpers/_metrics/: index.html
reference/mlproject/neural_net/: index.html
report/reference-models/: conv_neural_net.py  decision_tree.py  ff_neural_net.py
report/tex/: latexmkrc  main.tex  packages.sty  references.bib
report/tex/sections/: 0.title_page.tex  1.introduction.tex  2.data_and_preprocessing.tex  3.eda.tex  4.implementations.tex  5.results.tex  6.discussion.tex  7.conclusion.tex  appendix.tex
report/tex/tables/: backprop_alg.tex  cnn_test_scores.tex  dt_test_scores.tex  ffnn_test_scores.tex  labelencoding.tex  labelencoding2.tex
search/: search_index.json
src/: main.py
src/data/: fashion_test_scaled.npy  fashion_train_pca.npy
src/mlproject/data/: fashion_test_pca.npy
src/mlproject/decision_tree/: __init__.py  _decision_tree.py  _impurity.py  _node.py
src/mlproject/helpers/: __init__.py  _data_loader.py  _metrics.py
src/mlproject/neural_net/: __init__.py  _activations.py  _dense_layer.py  _loss.py  _neural_net.py
src/scripts/: __init__.py
src/scripts/helpers/: __init__.py  _data_loader.py
src/scripts/models/: __init__.py
src/test/: acc_hist.pkl  loss_hist.pkl  main.py
src/test/results/: acc_hist.txt  loss_hist.txt
src/test/scripts/: __init__.py  _custom_dt.py  _custom_nn.py  _keras_cnn.py
test/: main-no_keras.py  main.py
test/scripts/: __init__.py  _custom_dt.py  _custom_nn.py  _keras_nn.py  _sklearn_dt.py
test/scripts/keras/: __init__.py  _keras_cnn.py  _keras_nn.py
(+7 files in other folders)
