[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'mlproject'
description = 'Machine Learning Project'
version = '0.0.1'
requires-python = '>=3.9'
dependencies = [
    'numpy', 
    'rich', 
    'scikit-learn',
]

[tool.tool.setuptools.packages.find]
where = ["."]  # ["."] by default
include = ["mlproject*"]  # ["*"] by default
exclude = ["tests*", "data*"]  # empty by default
#[tool.setuptools]
#packages = ["mlproject"]