[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlproject"
authors = [  
    { name = "Viggo Yann Unmack Gascou" },
    { name = "Frida Nøhr Laustsen" },
    { name = "Marie Haahr Petersen" }
]
description = "Machine Learning Project"

version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "numpy", 
    "rich", 
    "scikit-learn",
    "matplotlib",
    "pandas",
    "seaborn",
]

[project.urls]
documentation = "https://viggo-gascou.github.io/machine-learning-project/"
repository = "https://github.com/viggo-gascou/machine-learning-project"


[tool.setuptools.packages.find]
where = ["src"]
include = ["mlproject*"]

[tool.setuptools.package-data]
"mlproject" = ["data/*.npy"]